small fixes to responsiveness, adjusted spacing in layout for About section and logo lockup

--- a/client/src/styles/about.css
+++ b/client/src/styles/about.css
@@ -28,7 +28,7 @@
 .about-text-site-container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 7%;
+  margin-top: 12%;
 }
 
 /**************************  media queries  ****************************/
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-top: 7%;
+    margin-top: 12%;
   }
   
   .about-text-site {
