--- a/client/src/styles/global-app.css
+++ b/client/src/styles/global-app.css
@@ -136,7 +136,7 @@ body {
   font-size: .9em;
   background: none;
   
-  margin: 15px 5px 0 0;
+  margin: 25px 5px 0 0;
 
   box-shadow: none;
 }
