--- a/client/src/styles/logo.css
+++ b/client/src/styles/logo.css
@@ -1,8 +1,21 @@
 .logo-nav {
   width: 130px ;
-  margin: 5px 20px 5px 0;
+  margin: 0 20px 5px 0;
   position: absolute;
-  top: 5px;
-  left: 8%;
+  left: 15%;
 }
 
+
+
+@media screen and (max-width: 1250px) {
+  .logo-nav {
+    left: 8%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .logo-nav {
+    left: 8%;
+    top: 2%;
+  }
+}
